feat(Swagger Docs): compeleting CompaniesController swagger annotations.
